opensesame (2.9.6~pre2-ubuntu1) vivid; urgency=medium

  * Improvements
    - Use the same default logfile in opensesamerun and opensesame
    - srbox plug-in: turn off all lights on init
    - srbox plug-in: don't search (non-existent) COM0 on Windows
  * Bugs fixed
    - Refresh file pool when opening experiment from command line (#320) 
    - Fix unicode bugs when launching opensesame and opensesamerun from command line (#323) 
    - Inform experiment of response variables in form_base plugin (#325) 
    - Refresh variable inspector on program start 
    - Clear variables and comments before parsing item-definition strings (#324) 
    - Fix timeout issue in (deprecated) text_input plugin

 -- Sebastiaan Mathot <sebastiaan@mantis>  Fri, 24 Apr 2015 13:47:31 +0200

opensesame (2.9.5-ubuntu1) utopic; urgency=medium

  * Bugs fixed
    - Don't delete an item when a drop is cancelled
    - Remove all references to deprecated keyboard.to_chr()
    - Remove empty response options in form_multiple_choice
    - Also rename and delete files in fallback pool folder
    - Don't crash on invalid fixdot style in sketchpad canvas
    - Don't crash when experiment-start item is invalid
    - Fix a bug in image form widget that prevented dubious images from being shown
    - Don't (re)decode unicode exception messages
    - Convert delete key to key name in legacy keyboard back-end
    - Re-initialize numpy random seed on experiment start
    - Ensure proper encoding of image paths in legacy back-end
    - Don't crash on variably defined font sizes in sketchpad widget
    - Don't crash when pygame.PixelArray doesn't work
    - Don't crash when loading plugin's from bytecode
    - Don't crash on variably defined cycles in loop item
    - Don't prepend underscore when renaming an item to the same name
  * Improvements
    - Explicitly notify of variable sequence preparation time
    - Add form template
    - Add show_cursor option to touch_response plug-in 